--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
                                 <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-contact menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-comment" aria-hidden="true"></i><span>Contact</span></a>
+                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-download menuitem">
                                 <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
@@ -43,16 +43,8 @@
             </div>
         </div>
     </header>
-    <section class="container-fluid">
-        <div class="row row-table">
-            <div class="col-md-8 bg-color-three-reasons section-column">
-                <div class="row">
-                    <div class="col">
-                        <h3 class="section-heading uppercase">About Me</h3>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <section>
+        
     </section>
     <footer class="container-fluid">
         <div id="footer-details" class="row">
@@ -67,7 +59,7 @@
                 <p class="inline-block">
                     Need a printable version of my CV? Download it here.
                     <a href="#" target="_blank" class="cv-pdf">
-                        <i class="fa fa-download" aria-hidden="true"></i>
+                        <i class="fab fa-download" aria-hidden="true"></i>
                         <span class="sr-only">Download link.</span>
                     </a>
                 </p>
