--- a/interests.html
+++ b/interests.html
@@ -192,6 +192,9 @@
             </div>
         </div>
     </footer>
+    <script>
+        var APIKey = 'AIzaSyCFRWJAFaj48xL1FcayLly3-bNZQpb55BE';
+    </script>
 </body>
 
 </html>
