Add script API tags

--- a/interests.html
+++ b/interests.html
@@ -193,8 +193,10 @@
         </div>
     </footer>
     <script>
-        var APIKey = 'AIzaSyCFRWJAFaj48xL1FcayLly3-bNZQpb55BE';
+        
     </script>
+    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCFRWJAFaj48xL1FcayLly3-bNZQpb55BE&callback=initMap"></script>
 </body>
 
 </html>
