--- a/interests.html
+++ b/interests.html
@@ -193,7 +193,15 @@
         </div>
     </footer>
     <script>
-        
+        function initMap() {
+            var map = new google.maps.Map(document.getElementById("map"), {
+                zoom: 3,
+                center: {
+                    lat: 46.619261,
+                    lng: -33.134766
+                }
+            });
+        }
     </script>
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCFRWJAFaj48xL1FcayLly3-bNZQpb55BE&callback=initMap"></script>
