--- a/interests.html
+++ b/interests.html
@@ -201,6 +201,24 @@
                     lng: -33.134766
                 }
             });
+
+            var labels = 'ABCDEFGHIJKLMNOPQRSTUVXWYZ';
+
+            var locations = [
+                { lat: 40.785091, lng: -73.968285 },
+                { lat: 41.084045, lng: -73.874245 },
+                { lat: 40.75932, lng: -73.984016 }
+            ];
+
+            var markers = locations.map(function(location,i) {
+                return new google.maps.Marker({
+                    position: location,
+                    label: label[i % labels.length]
+                });
+            });
+
+            var markerCluster = new MarkerClusterer(map, markers,
+            {imagePath: 'https://developers.google.com/maps/documentation/javascript/examples/markercluster/m'});
         }
     </script>
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
