--- a/interests.html
+++ b/interests.html
@@ -192,37 +192,9 @@
             </div>
         </div>
     </footer>
-    <script>
-        function initMap() {
-            var map = new google.maps.Map(document.getElementById("map"), {
-                zoom: 3,
-                center: {
-                    lat: 46.619261,
-                    lng: -33.134766
-                }
-            });
-
-            var labels = 'ABCDEFGHIJKLMNOPQRSTUVXWYZ';
-
-            var locations = [
-                { lat: 40.785091, lng: -73.968285 },
-                { lat: 41.084045, lng: -73.874245 },
-                { lat: 40.75932, lng: -73.984016 }
-            ];
-
-            var markers = locations.map(function(location,i) {
-                return new google.maps.Marker({
-                    position: location,
-                    label: label[i % labels.length]
-                });
-            });
-
-            var markerCluster = new MarkerClusterer(map, markers,
-            {imagePath: 'https://developers.google.com/maps/documentation/javascript/examples/markercluster/m'});
-        }
-    </script>
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCFRWJAFaj48xL1FcayLly3-bNZQpb55BE&callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDHHyac2SiOYPNYxXMK7rqJjnB8nCaaxE&callback=initMap"></script>
+    <script src="assets/js/maps.js"></script>
 </body>
 
 </html>
