Connect to EmailJS SDK

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function(){
+            emailjs.init("user_ls7hv2o0IwKJJTvJmIbBI");
+            emailjs.send("gmail", "rosie", {
+                name: "Richard",
+                notes: "The project that I want is..."
+            });
+        })();
+</script>
+
     <title>Rosie</title>
 </head>
 <body>
